--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.12.0",
     "pusher-js": "^5.0.2",
+    "random-animal-name-generator": "^0.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-timeago": "^4.4.0",
+    "slugify": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
